--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     <link rel="icon" href="{{ asset('img/logo7.png') }}">
 </head>
 <body>
-<div class="container-fluid dark-blue">
+<div class="container-fluid dark-blue sticky-top">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ path('main_home') }}">
@@ -60,7 +60,7 @@
     </nav>
 </div>
 
-<div class="container mt-2 mb-2">
+<div class="container mt-2">
     {% for label, messages in app.flashes %}
         {% for message in messages %}
             <div class="alert alert-{{ label }} mt-2 text-center" role="alert">
