--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,11 +19,11 @@
                         <legend class="h3 text-dark-blue">Connectez-vous!</legend>
                         <div class="form-group">
                             <label for="inputLogin">Email ou pseudo</label>
-                            <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" required autofocus>
+                            <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" autofocus>
                         </div>
                         <div class="form-group">
                             <label for="inputPassword">Mot de passe</label>
-                            <input type="password" name="password" id="inputPassword" class="form-control" required>
+                            <input type="password" name="password" id="inputPassword" class="form-control">
                         </div>
                         <input type="hidden" name="_csrf_token"
                                value="{{ csrf_token('authenticate') }}"
